devenv-tui/tests/snapshots/tui_tests__activity_with_details.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Building shell → nix eval --json .#devenv.config [TIME]

                                             ↑↓ j/k ^D/^U
