devenv-tui/tests/snapshots/tui_tests__cachix_push_alongside_build.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Building  hello-2.12 buildPhase         [TIME]
⠋ Pushing to my-cache 3/7 → python-3.11.5 [TIME]

 0/1 builds                         ↑↓ j/k ^D/^U
