devenv-tui/tests/snapshots/tui_tests__cachix_push_progress.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Pushing to my-cache 3/10 → hello-2.12 [TIME]

                                  ↑↓ j/k ^D/^U
