devenv-tui/tests/snapshots/tui_tests__cachix_push_started.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Pushing to my-cache [TIME]

                ↑↓ j/k ^D/^U
