devenv-tui/tests/snapshots/tui_tests__cachix_push_with_failures.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
✗ Pushing to my-cache 8/10               [TIME]
  │ openssl-3.0.0: HTTP 403: Access Denied
  │ glibc-2.37: HTTP 500: Internal Server Error

                                   ↑↓ j/k ^D/^U
