devenv-tui/tests/snapshots/tui_tests__completed_shell_tree_collapsed.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: collapsed
---
✓ ▸ Building shell 2 steps [TIME] 

 ↑↓ nav Enter expand Esc clear
