devenv-tui/tests/snapshots/tui_tests__completed_shell_tree_expanded.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: expanded
---
✓ ▾ Building shell           [TIME] 
  └ ✓ Evaluating Nix         [TIME]
    └ ✓ Building  hello-2.12 [TIME]

 ↑↓ j/k ^D/^U • Enter ▴ • Esc clear
