devenv-tui/tests/snapshots/tui_tests__deep_nesting.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Building shell                                                   [TIME]
  └ ⠋ Building  wrapper-scripts buildPhase                         [TIME]
    └ ⠋ Downloading bash-5.2 from cache.nixos.org                  [TIME]
        ──────────────────────────────────────────────500kB / 1MB at 5MB/s
      └ ⠋ Downloading  readline-8.2 from cache.nixos.org           [TIME]
        └ ⠋ Downloading  ncurses-6.4 from cache.nixos.org          [TIME]

 0/1 builds │ 0/3 downloads                                  ↑↓ j/k ^D/^U
