devenv-tui/tests/snapshots/tui_tests__devenv_failed_shows_logs.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
✗ devenv shell 3 lines      [TIME]
  │ Running enterShell hook...
  │ error: command 'foo' not found
  │ hint: did you mean 'bar'?

                      ↑↓ j/k ^D/^U
