devenv-tui/tests/snapshots/tui_tests__download_with_progress.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Downloading Downloading nixpkgs                                  [TIME]
    ──────────────────────────────────────────────────5kB / 10kB at 50kB/s

 0/1 downloads                                               ↑↓ j/k ^D/^U
