devenv-tui/tests/snapshots/tui_tests__download_with_substituter.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Downloading Downloading package from cache.nixos.org             [TIME]
    ───────────────────────────────────────────────────1kB / 2kB at 10kB/s

 0/1 downloads                                               ↑↓ j/k ^D/^U
